--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,6 +25,10 @@ h6 {
     font-family: 'Catamaran';
     font-weight: 800 !important;
 }
+img {
+    width: 100%;
+    height: auto;
+}
 
 .btn-xl {
     text-transform: uppercase;
