--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -1,21 +1,16 @@
-%h2 Sign up
-= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = devise_error_messages!
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true, autocomplete: "email"
-  .field
-    = f.label :password
-    - if @minimum_password_length
-      %em
-        (#{@minimum_password_length} characters minimum)
-    %br/
-    = f.password_field :password, autocomplete: "off"
-  .field
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "off"
-  .actions
-    = f.submit "Sign up"
-= render "users/shared/links"
+.container
+  .card.card-container
+    %img#profile-img.profile-img-card{:src => "//ssl.gstatic.com/accounts/ui/avatar_2x.png"}/
+    %p#profile-name.profile-name-card
+    = form_for(resource, as: resource_name, url: session_path(resource_name),class: "form-signin") do |f|
+      %span#reauth-email.reauth-email
+      = f.email_field :email, autofocus: true, autocomplete: "email",type:"email", id:"inputEmail", class: "form-control", placeholder:"Email address"
+      - if @minimum_password_length
+        %em
+          ( "Password" #{@minimum_password_length} characters minimum)
+      %br/
+      = f.password_field :password, autocomplete: "off",type:"password", id:"inputPassword", class: "form-control", placeholder:"Password", required: true
+      %br/
+      = f.password_field :password_confirmation, autocomplete: "off", type:"password", id:"inputPassword", class: "form-control", placeholder:"Password confirmation", required: true
+      = f.submit "Log in",class: "btn btn-lg btn-primary btn-block btn-signin", type:"submit"
+    = render "users/shared/links"
