--- a/app/views/layouts/user_devise.html.haml
+++ b/app/views/layouts/user_devise.html.haml
@@ -4,10 +4,9 @@
     %title PleaseDontDie
     = csrf_meta_tags
     = csp_meta_tag
+    = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = stylesheet_link_tag    'user', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
-    = stylesheet_link_tag    'user', media: 'all', 'data-turbolinks-track': 'reload'
-    = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
-    %script{:src => "//code.jquery.com/jquery-1.11.1.min.js"}
+    = javascript_include_tag 'user', 'data-turbolinks-track': 'reload'
   %body
     = yield
