--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -2,7 +2,7 @@
   .card.card-container
     %img#profile-img.profile-img-card{:src => "//ssl.gstatic.com/accounts/ui/avatar_2x.png"}/
     %p#profile-name.profile-name-card
-    = form_for(resource, as: resource_name, url: session_path(resource_name),class: "form-signin") do |f|
+    = form_for(resource, as: resource_name, url: registration_path(resource_name),class: "form-signin") do |f|
       %span#reauth-email.reauth-email
       = f.email_field :email, autofocus: true, autocomplete: "email",type:"email", id:"inputEmail", class: "form-control", placeholder:"Email address"
       - if @minimum_password_length
@@ -13,5 +13,5 @@
       %br/
       = f.password_field :password_confirmation, autocomplete: "off", type:"password", id:"inputPassword", class: "form-control", placeholder:"Password confirmation", required: true
       %br/
-      = f.submit "Log in",class: "btn btn-lg btn-primary btn-block btn-signin", type:"submit"
+      = f.submit "Register",class: "btn btn-lg btn-primary btn-block btn-signin", type:"submit"
     = render "users/shared/links"
