pet backend changes

--- a/app/views/pets/_form.html.erb
+++ b/app/views/pets/_form.html.erb
@@ -16,28 +16,16 @@
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :specie %><br />
-    <%= f.text_field :specie %>
-  </div>
-  <div class="field">
     <%= f.label :bio %><br />
     <%= f.text_area :bio %>
   </div>
   <div class="field">
-    <%= f.label :birthday %><br />
-    <%= f.date_select :birthday %>
+    <%= f.label :bithdary %><br />
+    <%= f.date_select :bithdary %>
   </div>
   <div class="field">
     <%= f.label :sex %><br />
     <%= f.text_field :sex %>
-  </div>
-  <div class="field">
-    <%= f.label :group %><br />
-    <%= f.text_field :group %>
-  </div>
-  <div class="field">
-    <%= f.label :timestamps %><br />
-    <%= f.text_field :timestamps %>
   </div>
   <div class="actions">
     <%= f.submit %>
