--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -6,33 +6,13 @@
 </p>
 
 <p>
-  <b>Specie:</b>
-  <%= @pet.specie %>
-</p>
-
-<p>
   <b>Bio:</b>
   <%= @pet.bio %>
 </p>
 
 <p>
   <b>Birthday:</b>
-  <%= @pet.birthday %>
-</p>
-
-<p>
-  <b>Sex:</b>
-  <%= @pet.sex %>
-</p>
-
-<p>
-  <b>Group:</b>
-  <%= @pet.group %>
-</p>
-
-<p>
-  <b>Timestamps:</b>
-  <%= @pet.timestamps %>
+  <%= @pet.bithdary %>
 </p>
 
 
