--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -5,5 +5,6 @@
   <%= @group.name %>
 </p>
 
+<%= link_to 'Add a Pet', new_group_pet_path(@group) %> |
 <%= link_to 'Edit', edit_group_path(@group) %> |
 <%= link_to 'Back', groups_path %>
