--- a/app/views/pets/_form.html.erb
+++ b/app/views/pets/_form.html.erb
@@ -20,7 +20,7 @@
     <%= f.text_area :bio %>
   </div>
   <div class="field">
-    <%= f.label :bithdary %><br />
+    <%= f.label :birthday %><br />
     <%= f.date_select :bithdary %>
   </div>
   <div class="field">
