--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,18 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<p id="notice"><%= notice %></p>
 
-
-PAGINA DE PERFIL DE USUARIO
+<p>
+  <strong>Name:</strong>
+  <%= @user.first_name %> <%= @user.last_name %>
+</p>
+<p>
+  <strong>Email:</strong>
+  <%= @user.email %>
+</p>
+<p>
+  <strong>Address:</strong>
+  <%= @user.address %>
+</p>
+<p>
+  <strong>Phone:</strong>
+  <%= @user.phone  %>
+</p>
