--- a/app/views/pets/edit.html.erb
+++ b/app/views/pets/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', [@pet.group, @pet] %> |
-<%= link_to 'Back', group_pets_path(@pet.group) %>
+<%= link_to 'Mais', [@pet.group, @pet] %> |
+<%= link_to 'Voltar', group_pets_path(@pet.group) %>
