--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -1,24 +1,24 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Name:</b>
+  <b>Nome:</b>
   <%= @pet.name %>
 </p>
 <p>
-  <b>Bio:</b>
+  <b>Biografia:</b>
   <%= @pet.bio %>
 </p>
 <p>
-  <b>Birthday:</b>
+  <b>Aniversário:</b>
   <%= @pet.birthday %>
 </p>
 <p>
-  <b>Sex:</b>
+  <b>Sexo:</b>
   <%= @pet.sex %>
 </p>
-  <b>Specie:</b>
+  <b>Espécie:</b>
   <%= %>
 
 </p>
-<%= link_to 'Edit', edit_group_pet_path(@pet.group, @pet) %> |
-<%= link_to 'Back', group_pets_path(@pet.group) %>
+<%= link_to 'Editar', edit_group_pet_path(@pet.group, @pet) %> |
+<%= link_to 'Voltar', group_pets_path(@pet.group) %>
