--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -12,11 +12,11 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :name %>
+    <%= form.label :nome %>
     <%= form.text_field :name %>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit "Submit"%>
   </div>
 <% end %>
