--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Group</h1>
+<h1>Editar Grupo</h1>
 
 <%= render 'form', group: @group %>
 
-<%= link_to 'Show', @group %> |
-<%= link_to 'Back', groups_path %>
+<%= link_to 'Mais', @group %> |
+<%= link_to 'Voltar', groups_path %>
