--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Group</h1>
+<h1>Novo Grupo</h1>
 
 <%= render 'form', group: @group %>
 
-<%= link_to 'Back', groups_path %>
+<%= link_to 'Voltar', groups_path %>
