--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -8,7 +8,7 @@
         -if user_signed_in?
           %li.nav-item
             = link_to "Logout", destroy_user_session_path, :class => "nav-link", method: :delete
-        -else         
+        -else
           %li.nav-item
             = link_to "Sign up", new_user_registration_path, :class => "nav-link"
           %li.nav-item
@@ -18,7 +18,10 @@
     .container
       %h1.masthead-heading.mb-0 Please Don't Die!
       %h2.masthead-subheading.mb-0 Keep your pet alive! For reals!
-      %a.btn.btn-primary.btn-xl.rounded-pill.mt-5{:href => "#"} Get Started
+      -if user_signed_in?
+        %a.btn.btn-primary.btn-xl.rounded-pill.mt-5{:href => home_path} Get Started
+      -else
+        %a.btn.btn-primary.btn-xl.rounded-pill.mt-5{:href => new_user_session_path} Get Started
 %section
   .container
     .row.align-items-center
