--- a/app/views/pets/new.html.erb
+++ b/app/views/pets/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New pet</h1>
+<h1>Novo pet</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', group_pets_path(@pet.group) %>
+<%= link_to 'Voltar', group_pets_path(@pet.group) %>
