--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -50,7 +50,8 @@ img {
 .navbar-custom {
     padding-top: 1rem;
     padding-bottom: 1rem;
-    background-color: hsl(120, 100%, 50%);
+    background-color:  #00e6e6
+    /* TODO:  background-color: hsl(120, 100%, 50%);*/
 }
 
 .navbar-custom .navbar-brand {
