--- a/app/views/layouts/user_devise.html.haml
+++ b/app/views/layouts/user_devise.html.haml
@@ -8,5 +8,9 @@
     = stylesheet_link_tag    'user', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'user', 'data-turbolinks-track': 'reload'
+    %link{:href => "css/uikit.css", :rel => "stylesheet", :type => "text/css"}/
+    %link{:href => "css/responsive.css", :media => "only screen and (max-width: 1200px)", :rel => "stylesheet"}/
   %body
+    = render 'layouts/navbar'
     = yield
+    = render 'layouts/shared/notifications'
