--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -1,13 +1,12 @@
 %article.card-body.mx-auto{:style => "max-width: 400px;"}
   %h4.card-title.mt-6.text-center Crie uma conta
   %p.text-center Get started with your free account
-  %p
   = form_for(resource, as: resource_name, url: registration_path(resource_name),class: "form-signin") do |f|
     .form-group.input-group
       .input-group-prepend
         %span.input-group-text
           %i.fa.fa-user
-      %input.form-control{:name => "", :placeholder => "Nome", :type => "text"}/
+      /= f.first_name_field :first_name, autofocus: true, autocomplete: "first_name",type:"text", id:"inputFirst_name", class: "form-control", placeholder:"Nome"
     .form-group.input-group
       .input-group-prepend
         %span.input-group-text
@@ -42,3 +41,6 @@
       = f.password_field :password_confirmation, autocomplete: "off", type:"password", id:"inputPassword", class: "form-control", placeholder:"Confirme a senha", required: true
     .form-group
       = f.submit "Criar conta",class: "btn btn-lg btn-primary btn-block btn-signin", type:"submit"
+      - unless devise_error_messages!.blank?
+        - resource.errors.full_messages.each do |message|
+          = javascript_tag "$.notify( { message: '#{message}'}, { type: 'danger', placement: { from: 'top', align: 'center' }});"
