--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -2,11 +2,11 @@
   %h4.card-title.mt-6.text-center Crie uma conta
   %p.text-center Get started with your free account
   = form_for(resource, as: resource_name, url: registration_path(resource_name),class: "form-signin") do |f|
-    .form-group.input-group
-      .input-group-prepend
-        %span.input-group-text
-          %i.fa.fa-user
-      /= f.first_name_field :first_name, autofocus: true, autocomplete: "first_name",type:"text", id:"inputFirst_name", class: "form-control", placeholder:"Nome"
+    / .form-group.input-group
+    /   .input-group-prepend
+    /     %span.input-group-text
+    /       %i.fa.fa-user
+    /   /= f.first_name_field :first_name, autofocus: true, autocomplete: "first_name",type:"text", id:"inputFirst_name", class: "form-control", placeholder:"Nome"
     .form-group.input-group
       .input-group-prepend
         %span.input-group-text
