--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -7,3 +7,44 @@
 
 <%= link_to 'Edit', edit_group_path(@group) %> |
 <%= link_to 'Back', groups_path %>
+
+<h2>User</h2>
+<table>
+  <thead>
+    <tr>
+      <th>Email</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @group.users.each do |user| %>
+      <tr>
+        <td><%= user.email %></td>
+        <%#<td><%= link_to 'Destroy', group, method: :delete, data: { confirm: 'Are you sure?' } %></td>%>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
+
+<h2>Pet</h2>
+<table>
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @group.pets.each do |pet| %>
+      <tr>
+        <td><%= pet.name %></td>
+        <%#<td><%= link_to 'Destroy', group, method: :delete, data: { confirm: 'Are you sure?' } %></td>%>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+
+ 
