--- a/app/views/layouts/user_devise.html.haml
+++ b/app/views/layouts/user_devise.html.haml
@@ -12,5 +12,7 @@
     %link{:href => "css/responsive.css", :media => "only screen and (max-width: 1200px)", :rel => "stylesheet"}/
   %body
     = render 'layouts/navbar'
-    = yield
-    = render 'layouts/shared/notifications'
+    .container{:style => "padding-top: 3%;" }
+      %article.card-body.bg-primary.mx-auto{:style => "max-width: 400px; padding-top: 25px;"}
+        = yield
+        = render 'layouts/shared/notifications'
