--- a/app/views/layouts/user_devise.html.haml
+++ b/app/views/layouts/user_devise.html.haml
@@ -13,6 +13,6 @@
   %body
     = render 'layouts/navbar'
     .container{:style => "padding-top: 3%;" }
-      %article.card-body.bg-primary.mx-auto{:style => "max-width: 400px; padding-top: 25px;"}
+      %article.card-body.bg-info.mx-auto{:style => "max-width: 400px; padding-top: 25px;"}
         = yield
         = render 'layouts/shared/notifications'
