--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -1,6 +1,7 @@
-%h4.card-title.text-center.mb-4.mt-1 Registrar
+%h4.card-title.text-center.mb-4.mt-1 Criar uma nova conta
 %hr/
-%p.text-center Get started with your free account
+%p.text-center
+  É gratuito e sempre será.
 = form_for(resource, as: resource_name, url: registration_path(resource_name),class: "form-signin") do |f|
   .form-group.input-group
     .input-group-prepend
@@ -44,7 +45,7 @@
           %i.fa.fa-phone 
       = profile_fields.text_field :phone, class:"form-control", placeholder:"Telefone"
   .form-group
-    = f.submit "Criar conta",class: "btn btn-lg btn-success btn-block btn-signin", type:"submit"
+    = f.submit "Cadastre-se",class: "btn btn-lg btn-primary btn-block", type:"submit"
     - unless devise_error_messages!.blank?
       - resource.errors.full_messages.each do |message|
         = javascript_tag "$.notify( { message: '#{message}'}, { type: 'danger', placement: { from: 'top', align: 'center' }})"
