--- a/app/views/layouts/user_devise.html.haml
+++ b/app/views/layouts/user_devise.html.haml
@@ -4,10 +4,10 @@
     %title PleaseDontDie
     = csrf_meta_tags
     = csp_meta_tag
-    = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
-    = stylesheet_link_tag    'user', media: 'all', 'data-turbolinks-track': 'reload'
-    = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
-    = javascript_include_tag 'user', 'data-turbolinks-track': 'reload'
+    = stylesheet_link_tag    'application', media: 'all'
+    = stylesheet_link_tag    'user', media: 'all'
+    = javascript_include_tag 'application'
+    = javascript_include_tag 'user'
     %link{:href => "css/uikit.css", :rel => "stylesheet", :type => "text/css"}/
     %link{:href => "css/responsive.css", :media => "only screen and (max-width: 1200px)", :rel => "stylesheet"}/
   %body
