notifications fix and register update

--- a/app/views/profile_user/edit.html.haml
+++ b/app/views/profile_user/edit.html.haml
@@ -20,4 +20,5 @@
   %p
     = f.text_field :phone, placeholder: "Telefone"
   .button
-    = submit_tag "Alterar Dados"
+    = submit_tag "Alterar Perfil"
+= link_to "Voltar", :back
