--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,8 +5,8 @@
     %title PleaseDontDie
     = csrf_meta_tags
     = csp_meta_tag
-    = javascript_include_tag 'application'
     = stylesheet_link_tag    'application', media: 'all'
+    = javascript_include_tag 'application'
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
     %meta{:charset => "utf-8"}/
     %meta{:content => "width=device-width, initial-scale=1, shrink-to-fit=no", :name => "viewport"}/
@@ -18,4 +18,4 @@
   %body
     = render 'layouts/navbar'
     = yield
-
+    = render 'layouts/shared/notifications'
