--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -17,8 +17,7 @@
   <%= @pet.sex %>
 </p>
   <b>Espécie:</b>
-  <%= @pet.specie_id %>
-  <%# TODO: Get pet specie name %>
+  <%= @specie.name%>
 
 </p>
 <%= link_to 'Editar', edit_group_pet_path(@pet.group, @pet) %> |
