--- a/app/views/pets/_form.html.erb
+++ b/app/views/pets/_form.html.erb
@@ -24,8 +24,8 @@
   </p>
   <p>
     <%= f.label :sexo %><br />
-    <%= f.radio_button :sex, 1 %>Macho
-    <%= f.radio_button :sex, 2 %>Femea
+    <%= f.radio_button :sex, "macho" %> Macho
+    <%= f.radio_button :sex, "fêmea" %> Fêmea
   </p>
   <p>
     <%= f.label :specie %><br />
