profile view update , layouts and aplication css some fix

--- a/app/views/profile_user/edit.html.haml
+++ b/app/views/profile_user/edit.html.haml
@@ -1,24 +1,30 @@
-= form_for(@user, url: profile_user_path(@user)) do |f|
-  %div
-    = f.label :Nome
-  %p
-    = f.text_field :first_name, placeholder: "Primeiro Nome"
-  %div
-    = f.label :Sobrenome
-  %p
-    = f.text_field :last_name, placeholder: "Sobrenome"
-  %div
-    = f.label :Data_de_nascimento
-  %p
-    = f.text_field :birthday, type: 'date'
-  %div
-    = f.label :Endereço
-  %p
-    = f.text_field :address, placeholder: "Endereço"
-  %div
-    = f.label :Telefone
-  %p
-    = f.text_field :phone, placeholder: "Telefone"
-  .button
-    = submit_tag "Alterar Perfil"
-= link_to "Voltar", :back
+.container
+  = form_for(@user, url: profile_user_path(@user)) do |f|
+    .form-group.row
+      %label.col-sm-3.col-form-label{:for => "inputNome"} Nome:
+      .col-sm-9
+        #inputNome
+          = f.text_field :first_name, placeholder: "Primeiro Nome", class: "form-control input"
+    .form-group.row
+      %label.col-sm-3.col-form-label{:for => "inputSobrenome"} Sobrenome:
+      .col-sm-9
+        #inputSobrenome
+          = f.text_field :last_name, placeholder: "Sobrenome", class: "form-control"
+    .form-group.row
+      %label.col-sm-3.col-form-label{:for => "inputNascimento"} Data de nascimento:
+      .col-sm-9
+        #inputNascimento
+          = f.text_field :birthday, type: 'date' ,class: "form-control"
+    .form-group.row
+      %label.col-sm-3.col-form-label{:for => "inputEndereco"} Endereço:
+      .col-sm-9
+        #inputEndereco
+          = f.text_field :address, placeholder: "Endereço", class: "form-control"
+    .form-group.row
+      %label.col-sm-3.col-form-label{:for => "inputTelefone"} Telefone:
+      .col-sm-9
+        #inputTelefone
+          = f.text_field :phone, placeholder: "Telefone", class: "form-control"
+    .form-group.row
+      .button
+        = f.submit "Salvar", class: "btn btn-primary"
